css/app.css
/* app css stylesheet */
body {
  background: -moz-linear-gradient(90deg, rgba(192,192,192,1) 0%, rgba(255,255,255,1) 53%, rgba(255,255,255,1) 100%); /* ff3.6+ */
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(255,255,255,1)), color-stop(47%, rgba(255,255,255,1)), color-stop(100%, rgba(192,192,192,1))); /* safari4+,chrome */
  background: -webkit-linear-gradient(90deg, rgba(192,192,192,1) 0%, rgba(255,255,255,1) 53%, rgba(255,255,255,1) 100%); /* safari5.1+,chrome10+ */
  background: -o-linear-gradient(90deg, rgba(192,192,192,1) 0%, rgba(255,255,255,1) 53%, rgba(255,255,255,1) 100%); /* opera 11.10+ */
  background: -ms-linear-gradient(90deg, rgba(192,192,192,1) 0%, rgba(255,255,255,1) 53%, rgba(255,255,255,1) 100%); /* ie10+ */
  background: linear-gradient(0deg, rgba(192,192,192,1) 0%, rgba(255,255,255,1) 53%, rgba(255,255,255,1) 100%); /* w3c */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#c0c0c0',GradientType=0 ); /* ie6-9 */
  background-attachment: fixed;

  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size:   16px;
  font-weight: 400;
}

.menu {
  list-style: none;
  border-bottom: 0.1em solid black;
  margin-bottom: 2em;
  padding: 0 0 0.5em;
}

.menu:before {
  content: "[";
}

.menu:after {
  content: "]";
}

.menu > li {
  display: inline;
}

.menu > li:before {
  content: "|";
  padding-right: 0.3em;
}

.menu > li:nth-child(1):before {
  content: "";
  padding: 0;
}

.navbar {
  background-color: #dddddd !important;
  height: 50px;
}

.navbar a {
  color: #000 !important;
}

.blog {
    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#9dd53a+0,a1d54f+20,80c217+68,80c217+68,80c217+77,7cbc0a+100 */
  background: #9dd53a; /* Old browsers */
  background: -moz-linear-gradient(top,  #9dd53a 0%, #a1d54f 20%, #80c217 68%, #80c217 68%, #80c217 77%, #7cbc0a 100%); /* FF3.6-15 */
  background: -webkit-linear-gradient(top,  #9dd53a 0%,#a1d54f 20%,#80c217 68%,#80c217 68%,#80c217 77%,#7cbc0a 100%); /* Chrome10-25,Safari5.1-6 */
  background: linear-gradient(to bottom,  #9dd53a 0%,#a1d54f 20%,#80c217 68%,#80c217 68%,#80c217 77%,#7cbc0a 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#9dd53a', endColorstr='#7cbc0a',GradientType=0 ); /* IE6-9 */
}

/* CSS for the creepy drawing of my head */

.head{
    z-index: 50000;
    position: absolute;
    left: 75%;
    top: 0%;
    height: 18em;
    width: 12em;
}

@media screen and (max-width: 900px) {
    .head {
      display: none;
    }
}

.navbar {
    -webkit-box-shadow: 0px 10px 28px -6px rgba(0,0,0,0.54);
    -moz-box-shadow: 0px 10px 28px -6px rgba(0,0,0,0.54);
    box-shadow: 0px 10px 28px -6px rgba(0,0,0,0.54);
}

